--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-express-template",
+  "name": "fitness-providers",
   "version": "1.0.0",
-  "description": "a template for apps using react, express, scss, tailwind, ejs, mongoose and typescript.",
+  "description": "This is a full scale website for students to find fitness instructors.",
   "main": "app.js",
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.duraken.com/everythingguy/react-express-template.git"
+    "url": "https://gitlab.duraken.com/fitness-providers/fitness-providers.git"
   },
   "author": "everythingguy",
   "license": "ISC",
