move config values into env

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,6 @@
+BASE_URL=http://localhost:3000
+BASE_API_URL=http://localhost:5000
+API_URL=http://localhost:5000/api/v1
 DB_USERNAME=
 DB_PASSWORD=
 DB_AUTHSOURCE=admin
