--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./config:/app/config
+      - ./.env:/app/.env
     environment:
       - DB_USERNAME=root
       - DB_PASSWORD=rootpassword
