--- a/client/package.json
+++ b/client/package.json
@@ -7,24 +7,26 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwindcss": "^2.2.7",
-    "web-vitals": "^1.1.2",
-    "dotenv": "^16.0.0",
-    "webpack": "^4.44.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "build-scss": "sass scss/style.scss:src/assets/style.css",
     "build-css": "postcss tailwind-src/tailwind.css -o src/assets/main.css && npm run build-scss",
     "start": "react-scripts start",
     "silent-start": "cross-env BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.config.js --mode production",
+    "dev": "webpack --config webpack.config.js --watch --mode development",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "e2e": "cypress open"
@@ -61,9 +63,16 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
+    "bootstrap-icons": "^1.8.1",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "cypress": "^8.3.0",
     "fitness-providers": "file:..",
-    "sass": "^1.37.5"
+    "react-bootstrap-icons": "^1.8.2",
+    "sass": "^1.37.5",
+    "ts-loader": "^9.2.9",
+    "webpack": "^5.0.0",
+    "webpack-bundle-tracker": "^1.5.0",
+    "webpack-cli": "^4.9.2"
   }
 }
