--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -131,6 +131,30 @@ cypress_chrome:
       - client/cypress/screenshots/**/*.png
     expire_in: 1 day
 
+build_dev:
+  image: docker:latest
+  stage: build
+  cache: []
+  dependencies: []
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: "/certs"
+  tags:
+    - docker
+    - amd64
+  only:
+    - dev
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+  script:
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:dev .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:dev
+  after_script:
+    - docker logout $CI_REGISTRY
+
 build_staging:
   image: docker:latest
   stage: build
