--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,6 +113,7 @@ cypress_chrome:
       paths:
         - client/cache/Cypress
   before_script:
+    - cp .env-sample .env
     - npm i -D
     - npm run build
     - cd client
