--- a/.env-sample
+++ b/.env-sample
@@ -1,13 +1,13 @@
-BASE_URL=http://localhost:3000
-BASE_API_URL=http://localhost:5000
-API_URL=http://localhost:5000/api/v1
+BASE_URL=http://localhost
+BASE_API_URL=http://localhost
+API_URL=http://localhost/api/v1
 DB_USERNAME=
 DB_PASSWORD=
 DB_AUTHSOURCE=admin
 DB_IP=localhost
 DB_PORT=27017
-DB_NAME=template
+DB_NAME=fitness-cypress
 SECRET=PLEASECHANGE2LONG&RANDOMSECRET
 REFRESH_TOKEN_SECRET=ANOTHERSECRETCHANEME
 ACCESS_TOKEN_SECRET=ANOTHERLONGSECRETPLEASECHANGE
-PORT=5000
+PORT=80
