--- a/client/cypress/.eslintrc.json
+++ b/client/cypress/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["plugin:cypress/recommended"]
+  "extends": ["plugin:cypress/recommended"],
+  "overrides": [
+    {
+      "files": ["*.spec.js"],
+      "rules": {
+        "no-unused-expressions": "off",
+        "jest/valid-expect": "off"
+      }
+    }
+  ]
 }
