--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "lint-fix": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
+    "build": "copyfiles src/views/**/*.ejs dist/views && tsc",
     "start": "node dist/app.js",
     "client": "npm run dev --prefix client",
     "silent-client": "npm run silent-start --prefix client",
@@ -41,6 +41,7 @@
     "babel-jest": "^26.6.0",
     "concurrency": "^0.1.4",
     "concurrently": "^6.2.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
