ci: compile step

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ junit.xml
 /client/webpack-stats.json
 client/cypress/screenshots
 client/cypress/videos
+client/src/assets/main.css
+client/src/assets/style.css
+client/src/assets/style.css.map
