--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ cache:
       - client/.npm
     policy: pull-push
   - &build_cache
-    key: $CI_COMMIT_SHA
+    key: build-$CI_COMMIT_SHA
     paths:
       - dist
       - client/dist
