--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ client/.pnp.js
 
 # production
 **/build
+**/dist
 
 # misc
 **/.DS_Store
@@ -27,14 +28,13 @@ client/.pnp.js
 
 todo.txt
 
-/client/src/assets/main.css
-/client/src/assets/style.css
-/client/src/assets/style.css.map
+client/src/assets/main.css
+client/src/assets/style.css
+client/src/assets/style.css.map
 .env
-dist
 mongodb_data
 junit.xml
-/client/webpack-stats.json
+client/webpack-stats.json
 client/cypress/screenshots
 client/cypress/videos
 client/src/assets/main.css
