--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,16 @@ stages:
 variables: &global_variables
   npm_config_cache: "$CI_PROJECT_DIR/.npm"
   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+  DB_USERNAME: everythingguy
+  # TODO: add the commented out fields to GitLab secrets
+  # TODO: add the env variables to docker run
+  # DB_PASSWORD: rootpassword
+  DB_AUTHSOURCE: dashboard
+  DB_IP: 10.0.0.44
+  DB_PORT: 27017
+  # SECRET: PLEASECHANGE2LONG&RANDOMSECRET
+  # REFRESH_TOKEN_SECRET:
+  # ACCESS_TOKEN_SECRET:
 
 tscompile:
   image: node:latest
@@ -278,6 +288,8 @@ deploy_main:
     - amd64
   cache: []
   variables:
+    <<: *global_variables
+    DB_COLLECTION: fitness-providers-prod
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     DOCKER_NAME: fitness_prod
@@ -300,7 +312,7 @@ deploy_main:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -339,12 +351,13 @@ deploy_staging:
     - amd64
   cache: []
   variables:
+    <<: *global_variables
+    DB_NAME: fitness-providers-staging
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     DOCKER_NAME: fitness_stage
     IMAGE_TAG: staging
     DOCKER_HOST: 10.0.0.194:2375
-    DB_NAME: fitness_stage
     SUBDOMAIN: stage
   environment:
     name: staging
@@ -360,7 +373,7 @@ deploy_staging:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -398,12 +411,13 @@ deploy_dev:
     - amd64
   cache: []
   variables:
+    <<: *global_variables
+    DB_NAME: fitness-providers-dev
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     DOCKER_NAME: fitness_dev
     IMAGE_TAG: dev
     DOCKER_HOST: 10.0.0.194:2375
-    DB_NAME: fitness_dev
     SUBDOMAIN: dev
   environment:
     name: dev
@@ -419,7 +433,7 @@ deploy_dev:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -456,11 +470,12 @@ deploy_branch:
   tags:
     - docker
   variables:
+    <<: *global_variables
+    DB_COLLECTION: fitness-providers-branch
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     IMAGE_TAG: $CI_COMMIT_BRANCH
     DOCKER_HOST: 10.0.0.194:2375
-    DB_NAME: fitness_branch
   except:
     - main
     - master
@@ -487,7 +502,7 @@ deploy_branch:
     #Get the subdomain substring from the environment url
     - SUBDOMAIN=$(echo $ENVIRONMENT_URL | cut -d "/" -f 3 | cut -d "." -f 1)
     #Create the docker container
-    - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
   artifacts:
