vscode extensions: add code coverage

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -22,6 +22,7 @@
     "stevencl.adddoccomments",
     "auchenberg.vscode-browser-preview",
     "hashicorp.terraform",
+    "markis.code-coverage",
     "ms-vscode.vscode-typescript-tslint-plugin"
   ]
 }
