--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -289,13 +289,12 @@ deploy_main:
   cache: []
   variables:
     <<: *global_variables
-    DB_COLLECTION: fitness-providers-prod
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     DOCKER_NAME: fitness_prod
     IMAGE_TAG: staging
     DOCKER_HOST: 10.0.0.194:2375
-    DB_NAME: fitness_prod
+    DB_NAME: fitness-providers-prod
     SUBDOMAIN: prod
   environment:
     name: production
@@ -471,7 +470,7 @@ deploy_branch:
     - docker
   variables:
     <<: *global_variables
-    DB_COLLECTION: fitness-providers-branch
+    DB_NAME: fitness-providers-branch
     GIT_STRATEGY: none
     CONTAINER_PORT: 80
     IMAGE_TAG: $CI_COMMIT_BRANCH
