--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "tailwindcss": "^2.2.7",
     "web-vitals": "^1.1.2"
@@ -23,8 +23,9 @@
   "scripts": {
     "lint": "tslint -c ../tslint.json -p tsconfig.json",
     "lint-fix": "tslint -c ../tslint.json -p tsconfig.json --fix",
-    "build-scss": "sass scss/style.scss:src/assets/style.css",
-    "build-css": "postcss tailwind-src/tailwind.css -o src/assets/main.css && npm run build-scss",
+    "watch-scss": "sass --watch scss:src/assets",
+    "build-scss": "sass scss:src/assets",
+    "build-css": "postcss tailwind-src/tailwind.css -o src/assets/tailwind.css && npm run build-scss",
     "start": "react-scripts start",
     "silent-start": "cross-env BROWSER=none react-scripts start",
     "build": "tsc && webpack --config webpack.config.js --mode production",
@@ -63,12 +64,13 @@
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap-icons": "^1.8.1",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "cypress": "^8.3.0",
+    "file-loader": "^6.2.0",
     "fitness-providers": "file:..",
     "react-bootstrap-icons": "^1.8.2",
     "sass": "^1.37.5",
