progress on mail class

--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,13 @@
 BASE_URL=http://localhost
 BASE_API_URL=http://localhost
 API_URL=http://localhost/api/v1
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_POSTMASTER=postmaster@yourdomain.com
+MAIL_POSTMASTER_PASSWORD=
+MAIL_FROM_EMAIL=noreply@yourdomain.com
+MAIL_CONTACT_EMAIL=contact@yourdomain.com
+PROVIDER_TYPE=fitness
 DB_USERNAME=
 DB_PASSWORD=
 DB_AUTHSOURCE=admin
