--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.6.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "babel-jest": "^26.6.0",
@@ -69,6 +70,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "nodemailer": "^6.7.5",
     "path": "^0.12.7",
     "validator": "^10.11.0"
   }
