--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,11 @@ stages:
 variables: &global_variables
   npm_config_cache: "$CI_PROJECT_DIR/.npm"
   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+  MAIL_HOST: smtp.mailgun.org
+  MAIL_PORT: 587
+  MAIL_FROM_EMAIL: noreply@fitnessproviders.net
+  MAIL_CONTACT_EMAIL: contact@fitnessproviders.net
+  PROVIDER_TYPE: fitness
   DB_USERNAME: everythingguy
   DB_AUTHSOURCE: dashboard
   DB_IP: 10.0.0.44
@@ -332,7 +337,7 @@ deploy_main:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -393,7 +398,7 @@ deploy_staging:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -453,7 +458,7 @@ deploy_dev:
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -522,7 +527,7 @@ deploy_branch:
     #Get the subdomain substring from the environment url
     - SUBDOMAIN=$(echo $ENVIRONMENT_URL | cut -d "/" -f 3 | cut -d "." -f 1)
     #Create the docker container
-    - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
   after_script:
     - docker logout $CI_REGISTRY
   artifacts:
