--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,5 @@
 BASE_URL=http://localhost
-BASE_API_URL=http://localhost
-API_URL=http://localhost/api/v1
+API_URL=/api/v1
 MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=465
 MAIL_POSTMASTER=postmaster@yourdomain.com
