--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,7 +200,7 @@ build_dev:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:dev .
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:dev --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:dev
   after_script:
@@ -224,7 +224,7 @@ build_staging:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging .
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:staging
   after_script:
@@ -252,7 +252,7 @@ build_branch:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH .
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
   after_script:
     - docker logout $CI_REGISTRY
@@ -276,7 +276,7 @@ build_main:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
   after_script:
@@ -300,7 +300,7 @@ build_tags:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
   after_script:
     - docker logout $CI_REGISTRY
