--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
