--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -188,6 +188,7 @@ build_dev:
   cache: []
   dependencies: []
   variables:
+    <<: *global_variables
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
   tags:
@@ -212,6 +213,7 @@ build_staging:
   cache: []
   dependencies: []
   variables:
+    <<: *global_variables
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
   tags:
@@ -236,6 +238,7 @@ build_branch:
   cache: []
   dependencies: []
   variables:
+    <<: *global_variables
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
   tags:
@@ -263,6 +266,7 @@ build_main:
   cache: []
   dependencies: []
   variables:
+    <<: *global_variables
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
   tags:
@@ -288,6 +292,7 @@ build_tags:
   cache: []
   dependencies: []
   variables:
+    <<: *global_variables
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
   tags:
