--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "tailwindcss": "^2.2.7",
     "web-vitals": "^1.1.2"
   },
