--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,49 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.191.0/containers/javascript-node-mongo
-// Update the VARIANT arg in docker-compose.yml to pick a Node.js version: 10, 12, 14 
+// Update the VARIANT arg in docker-compose.yml to pick a Node.js version: 10, 12, 14
 {
-	"name": "Node.js, Typescript, & Mongo DB",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspace",
+  "name": "Node.js, Typescript, & Mongo DB",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "app",
+  "workspaceFolder": "/workspace",
 
-	// Set *default* container specific settings.json values on container create.
-	"settings": {},
+  // Set *default* container specific settings.json values on container create.
+  "settings": {},
 
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"dbaeumer.vscode-eslint",
-		"mongodb.mongodb-vscode" 
-	],
+  // Add the IDs of extensions you want installed when the container is created.
+  "extensions": [
+    "mongodb.mongodb-vscode",
+    "coenraads.bracket-pair-colorizer-2",
+    "hookyqr.beautify",
+    "ms-azuretools.vscode-docker",
+    "digitalbrainstem.javascript-ejs-support",
+    "taodongwu.ejs-snippets",
+    "dsznajder.es7-react-js-snippets",
+    "eamodio.gitlens",
+    "pkosta2005.heroku-command",
+    "ecmel.vscode-html-css",
+    "xabikos.javascriptsnippets",
+    "eg2.vscode-npm-script",
+    "equimper.react-native-react-redux",
+    "ms-vscode-remote.vscode-remote-extensionpack",
+    "shan.code-settings-sync",
+    "thezhir.vscode-snippets",
+    "redhat.vscode-yaml",
+    "mongodb.mongodb-vscode",
+    "ritwickdey.live-sass",
+    "stevencl.adddoccomments",
+    "auchenberg.vscode-browser-preview",
+    "hashicorp.terraform",
+    "markis.code-coverage",
+    "ms-vscode.vscode-typescript-tslint-plugin"
+  ],
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [3000, 27017],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [80, 27017],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "yarn install",
 
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  "remoteUser": "node"
 }
